Fix weird spacing on blog page

--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,4 @@
-body{margin:0px;}
+* {margin:0px; padding:0px;}
 a, a:visited{
 	color:black;
 	text-decoration:none;
